# GenesisChamber

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.frontend  MASTERPLAN.md  README.md  docker-compose.yml  render.yaml  requirements.txt  start.sh
OTHER SYSTEMS TO ANALYSE AND SYNTHESIS FOR SOUL AND CHAMBER/GENESIS CHAMBER-SOUL BUILDING/genesischamber/terminalversion/: .env.example  .gitignore  CLAUDE.md  clean  config.toml  main.py  problems  pyproject.toml  requirements.txt  run  test_prompt_loader.py  ui.py
OTHER SYSTEMS TO ANALYSE AND SYNTHESIS FOR SOUL AND CHAMBER/GENESIS CHAMBER-SOUL BUILDING/genesischamber/terminalversion/.claude/: settings.local.json
OTHER SYSTEMS TO ANALYSE AND SYNTHESIS FOR SOUL AND CHAMBER/GENESIS CHAMBER-SOUL BUILDING/genesischamber/terminalversion/agents/: __init__.py  base_agent.py  expert_agent.py  moderator_agent.py  summarizer_agent.py
OTHER SYSTEMS TO ANALYSE AND SYNTHESIS FOR SOUL AND CHAMBER/GENESIS CHAMBER-SOUL BUILDING/genesischamber/terminalversion/ai-council-web/: README.md  run_all.sh  run_backend.sh  run_frontend.sh
OTHER SYSTEMS TO ANALYSE AND SYNTHESIS FOR SOUL AND CHAMBER/GENESIS CHAMBER-SOUL BUILDING/genesischamber/terminalversion/documentation/: project-specification.md  technical-implementation-plan.md
OTHER SYSTEMS TO ANALYSE AND SYNTHESIS FOR SOUL AND CHAMBER/GENESIS CHAMBER-SOUL BUILDING/genesischamber/terminalversion/experts/: steve_jobs.meta.toml
OTHER SYSTEMS TO ANALYSE AND SYNTHESIS FOR SOUL AND CHAMBER/GENESIS CHAMBER-SOUL BUILDING/genesischamber/terminalversion/experts_complex/: jeff_bezos.txt  (+2 more)
(+292 files in other folders)
